@@ -1,12 +1,15 @@
 package net.myplayplanet.bwinfbackend.service.statistic;
 
 import lombok.RequiredArgsConstructor;
-import net.myplayplanet.bwinfbackend.dto.OverallProgressDTO;
-import net.myplayplanet.bwinfbackend.dto.TaskProgressDTO;
+import lombok.extern.slf4j.Slf4j;
+import net.myplayplanet.bwinfbackend.dto.*;
 import net.myplayplanet.bwinfbackend.model.Evaluation;
 import net.myplayplanet.bwinfbackend.model.EvaluationType;
+import net.myplayplanet.bwinfbackend.model.TaskProgressDataPoint;
 import net.myplayplanet.bwinfbackend.model.TaskType;
+import net.myplayplanet.bwinfbackend.repository.CorrectionContextRepository;
 import net.myplayplanet.bwinfbackend.repository.EvaluationRepository;
+import net.myplayplanet.bwinfbackend.repository.TaskProgressDataPointRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -15,28 +18,110 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
 public class AssessmentService {
 
     private final EvaluationRepository evaluationRepository;
+    private final TaskProgressDataPointRepository taskProgressDataPointRepository;
+    private final CorrectionContextRepository correctionContextRepository;
 
-    public TaskProgressDTO calculateTaskProgressDto(Long correctionContextId, TaskType taskType, Integer taskId) {
-        Set<Evaluation> evaluations = this.evaluationRepository
-                .findByTaskTypeAndTaskNumberAndCorrectionContext_Id(taskType, taskId, correctionContextId);
+    public CombinedProgressDataPointDto calculateCombinedProgressDataPointDto(Long correctionContextId) {
 
-        return getTaskProgressDTO(evaluations, taskType, taskId);
+        List<TaskProgressDataPointDto> list = new ArrayList<>();
+
+        for (int i = 1; i <= 2; i++) {
+            list.add(calculateTaskProgressDataPointDto(correctionContextId, TaskType.JWINF, i));
+        }
+        for (int i = 1; i <= 5; i++) {
+            list.add(calculateTaskProgressDataPointDto(correctionContextId, TaskType.BWINF, i));
+        }
+        return new CombinedProgressDataPointDto(
+                calculateGlobalTaskProgressDataPointDto(correctionContextId),
+                list
+        );
     }
 
-    public OverallProgressDTO calculateOverallProgress(Long correctionContextId) {
-        Set<Evaluation> evaluations = this.evaluationRepository.findByCorrectionContext_Id(correctionContextId);
+    public GlobalProgressDataPointDto calculateGlobalTaskProgressDataPointDto(Long correctionContextId) {
+        int open = 0, done = 0, onlyFirstDone = 0, inProgress = 0, totalSubmissions = 0;
+        LocalDateTime lastUpdated = LocalDateTime.MIN;
 
-        int totalTasks = (int) evaluations.stream()
-                .map(e -> e.getTaskType() + "-" + e.getTaskNumber())
-                .distinct()
-                .count();
+        for (int i = 1; i <= 2; i++) {
+            TaskProgressDataPointDto progress = this.calculateTaskProgressDataPointDto(correctionContextId, TaskType.JWINF, i);
+            ProgressDataPointDto progressDataPointDto = progress.getProgressDataPointDto();
+            open += progressDataPointDto.getOpen();
+            done += progressDataPointDto.getDone();
+            onlyFirstDone += progressDataPointDto.getOnlyFirstDone();
+            inProgress += progressDataPointDto.getInProgress();
+            totalSubmissions += progressDataPointDto.getTotalSubmissions();
 
-        Result result = getResult(evaluations);
+            if (progress.getCreatedAt().isAfter(lastUpdated)) {
+                lastUpdated = progress.getCreatedAt();
+            }
+        }
+
+        for (int i = 1; i <= 5; i++) {
+            TaskProgressDataPointDto progress = this.calculateTaskProgressDataPointDto(correctionContextId, TaskType.BWINF, i);
+            ProgressDataPointDto progressDataPointDto = progress.getProgressDataPointDto();
+            open += progressDataPointDto.getOpen();
+            done += progressDataPointDto.getDone();
+            onlyFirstDone += progressDataPointDto.getOnlyFirstDone();
+            inProgress += progressDataPointDto.getInProgress();
+            totalSubmissions += progressDataPointDto.getTotalSubmissions();
+
+            if (progress.getCreatedAt().isAfter(lastUpdated)) {
+                lastUpdated = progress.getCreatedAt();
+            }
+        }
+        ProgressDataPointDto progressDataPointDto = new ProgressDataPointDto(open, done, onlyFirstDone, inProgress, totalSubmissions);
+        return new GlobalProgressDataPointDto(progressDataPointDto,
+                lastUpdated);
+    }
+
+    public TaskProgressDataPointDto calculateTaskProgressDataPointDto(Long correctionContextId, TaskType taskType, Integer taskNumber) {
+        Optional<TaskProgressDataPoint> optional = this.taskProgressDataPointRepository.findFirstByCorrectionContext_IdAndTaskTypeAndTaskNumberOrderByCreatedAtDesc(correctionContextId, taskType, taskNumber);
+
+        if (optional.isEmpty()) {
+            return new TaskProgressDataPointDto(taskType, taskNumber, new ProgressDataPointDto(
+                    0, 0, 0, 0, 0
+            ), LocalDateTime.MIN);
+        }
+
+        TaskProgressDataPoint taskProgressDataPoint = optional.get();
+        ProgressDataPointDto taskProgressDataPointDto = new ProgressDataPointDto(taskProgressDataPoint.getOpen(),
+                taskProgressDataPoint.getDone(),
+                taskProgressDataPoint.getOnlyFirstDone(),
+                taskProgressDataPoint.getInProgress(),
+                taskProgressDataPoint.getOpen() + taskProgressDataPoint.getDone() + taskProgressDataPoint.getOnlyFirstDone() + taskProgressDataPoint.getInProgress()
+        );
+
+        log.info("ProgressData for task {} {} {}", taskType, taskNumber, taskProgressDataPointDto);
+        return new TaskProgressDataPointDto(taskType,
+                taskNumber,
+                taskProgressDataPointDto,
+                taskProgressDataPoint.getCreatedAt()
+        );
+    }
+
+    private int countTotalSubmissions(Long contextId) {
+
+        int counter = 0;
+
+        for (int i = 1; i <= 2; i++) {
+            counter += (int) this.evaluationRepository.countDistinctSubmissionIds(contextId, i, TaskType.JWINF);
+        }
+
+        for (int i = 1; i <= 5; i++) {
+            counter += (int) this.evaluationRepository.countDistinctSubmissionIds(contextId, i, TaskType.BWINF);
+        }
+
+        return counter;
+
+    }
+
+    public void saveNewProgressDataPoint(Long correctionContextId) {
+        Set<Evaluation> evaluations = this.evaluationRepository.findLatestEvaluationsByCorrectionContext(correctionContextId);
 
         String updatedAt = evaluations.stream()
                 .map(Evaluation::getCreatedAt)
@@ -45,7 +130,7 @@ public class AssessmentService {
                 .orElse(Instant.now().toString());
 
         // Build per-task progress
-        List<TaskProgressDTO> byTask = evaluations.stream()
+        List<TaskProgressDataPoint> byTask = evaluations.stream()
                 .collect(Collectors.groupingBy(e -> e.getTaskType() + "-" + e.getTaskNumber()))
                 .entrySet()
                 .stream()
@@ -54,82 +139,40 @@ public class AssessmentService {
                     TaskType type = TaskType.valueOf(parts[0]);
                     Integer number = Integer.valueOf(parts[1]);
                     Set<Evaluation> taskEvals = new HashSet<>(entry.getValue());
-                    return calculateTaskProgressDto(taskEvals, type, number);
+                    return calculateTaskProgressPoint(correctionContextId, type, number, taskEvals);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        TaskProgressDTO.Percentages pct = new TaskProgressDTO.Percentages(result.firstPercentage(), result.secondPercentage(), result.totalPercentage());
-
-        return OverallProgressDTO.builder()
-                .totalTasks(totalTasks)
-                .totalSubmissions(result.totalSubmissions())
-                .firstAssessmentsDone(result.firstAssessmentsDone())
-                .secondAssessmentsDone(result.secondAssessmentsDone())
-                .totalAssessmentsDone(result.totalAssessmentsDone())
-                .firstMissing(result.firstMissing())
-                .secondMissing(result.secondMissing())
-                .totalMissing(result.totalMissing())
-                .percentages(pct)
-                .byTask(byTask)
-                .updatedAt(updatedAt)
-                .build();
+        this.taskProgressDataPointRepository.saveAll(byTask);
     }
 
-    private static Result getResult(Set<Evaluation> evaluations) {
-        int totalSubmissions = evaluations.size();
-        int firstAssessmentsDone = (int) evaluations.stream().filter(e -> e.getEvaluationType() == EvaluationType.FIRST).count();
-        int secondAssessmentsDone = (int) evaluations.stream().filter(e -> e.getEvaluationType() == EvaluationType.SECOND).count();
-        int totalAssessmentsDone = firstAssessmentsDone + secondAssessmentsDone;
+    private TaskProgressDataPoint calculateTaskProgressPoint(Long contextId, TaskType taskType, Integer taskNumber, Set<Evaluation> evaluations) {
+        Set<Evaluation> relevantEvaluations = evaluations.stream().filter(evaluation -> evaluation.getTaskType().equals(taskType) && Objects.equals(evaluation.getTaskNumber(), taskNumber)).collect(Collectors.toSet());
 
-        int firstMissing = totalSubmissions - firstAssessmentsDone;
-        int secondMissing = totalSubmissions - secondAssessmentsDone;
-        int totalMissing = totalSubmissions * 2 - totalAssessmentsDone;
+        int firstAssessmentsDone = (int) relevantEvaluations.stream().filter(e -> e.getEvaluationType() == EvaluationType.FIRST).count();
+        int secondAssessmentsDone = (int) relevantEvaluations.stream().filter(e -> e.getEvaluationType() == EvaluationType.SECOND).count();
+        int inProgress = (int) relevantEvaluations.stream().filter(e -> e.getEvaluationType() == EvaluationType.IN_PROGRESS).count();
 
-        double firstPercentage = totalSubmissions == 0 ? 0.0 : ((double) firstAssessmentsDone / totalSubmissions) * 100;
-        double secondPercentage = totalSubmissions == 0 ? 0.0 : ((double) secondAssessmentsDone / totalSubmissions) * 100;
-        double totalPercentage = totalSubmissions == 0 ? 0.0 : ((double) totalAssessmentsDone / (totalSubmissions * 2)) * 100;
-        return new Result(totalSubmissions, firstAssessmentsDone, secondAssessmentsDone, totalAssessmentsDone, firstMissing, secondMissing, totalMissing, firstPercentage, secondPercentage, totalPercentage);
-    }
+        int totalSubmissions = (int) this.evaluationRepository.countDistinctSubmissionIds(contextId, taskNumber, taskType);
 
-    private record Result(int totalSubmissions,
-                          int firstAssessmentsDone,
-                          int secondAssessmentsDone,
-                          int totalAssessmentsDone,
-                          int firstMissing,
-                          int secondMissing,
-                          int totalMissing,
-                          double firstPercentage,
-                          double secondPercentage,
-                          double totalPercentage) {
-    }
+        LocalDateTime lastUpdated = LocalDateTime.MIN;
+        for (Evaluation evaluation : relevantEvaluations) {
+            if (evaluation.getCreatedAt().isAfter(lastUpdated)) {
+                lastUpdated = evaluation.getCreatedAt();
+            }
+        }
 
-    // Helper method to calculate TaskProgressDTO from a Set<Evaluation>
-    private TaskProgressDTO calculateTaskProgressDto(Set<Evaluation> evaluations, TaskType taskType, Integer taskId) {
-        return getTaskProgressDTO(evaluations, taskType, taskId);
-    }
+        int open = totalSubmissions - firstAssessmentsDone - secondAssessmentsDone - inProgress;
 
-    private TaskProgressDTO getTaskProgressDTO(Set<Evaluation> evaluations, TaskType taskType, Integer taskId) {
-        Result result = getResult(evaluations);
-
-        String updatedAt = evaluations.stream()
-                .map(Evaluation::getCreatedAt)
-                .max(LocalDateTime::compareTo)
-                .map(LocalDateTime::toString)
-                .orElse(null);
-
-        return TaskProgressDTO.builder()
-                .taskId(taskId.toString())
-                .taskName(taskType.name())
-                .totalSubmissions(result.totalSubmissions())
-                .firstAssessmentsDone(result.firstAssessmentsDone())
-                .secondAssessmentsDone(result.secondAssessmentsDone())
-                .totalAssessmentsDone(result.totalAssessmentsDone())
-                .firstMissing(result.firstMissing())
-                .secondMissing(result.secondMissing())
-                .totalMissing(result.totalMissing())
-                .percentages(new TaskProgressDTO.Percentages(result.firstPercentage(), result.secondPercentage(), result.totalPercentage()))
-                .updatedAt(updatedAt)
-                .build();
+        return new TaskProgressDataPoint(null, this.correctionContextRepository.getReferenceById(contextId),
+                taskType,
+                taskNumber,
+                open,
+                secondAssessmentsDone,
+                firstAssessmentsDone,
+                inProgress,
+                lastUpdated
+        );
     }
 
 
